Add Redis feature description

--- a/docs/user/00-20-nfs.md
+++ b/docs/user/00-20-nfs.md
@@ -8,10 +8,10 @@ When you create an NFS instance in Kyma, you depend on the cloud provider of you
 
 Cloud Manager module supports the NFS feature of two cloud providers:
 
-* Google Cloud's [Filestore](https://cloud.google.com/filestore?hl=en)
 * Amazon Web Services [Amazon Elastic File System](https://aws.amazon.com/efs/)
+* Google Cloud's [Filestore](https://cloud.google.com/filestore?hl=en)
 
-You can configure Cloud Manager's NFS instances using the NFS custom resource corresponding with the cloud provider for your Kyma cluster, namely GcpNfsVolume CR or AwsNfsVolume CR.
+You can configure Cloud Manager's NFS instances using a dedicated NFS custom resource corresponding with the cloud provider for your Kyma cluster, namely AwsNfsVolume CR or GcpNfsVolume CR.
 
 ## Prerequisites
 
@@ -19,7 +19,7 @@ To instantiate NFS, an IpRange CR must exist in the Kyma cluster. IpRange define
 
 ## Lifecycle
 
-GcpNfsVolume and AwsNfsVolume are namespace-level CRs. Once you create a GcpNfsVolume or AwsNfsVolume resource, the following are also created automatically:
+AwsNfsVolume and GcpNfsVolume are namespace-level CRs. Once you create a GcpNfsVolume or AwsNfsVolume resource, the following are also created automatically:
 
 * IpRange CR
   * IpRange is a cluster-level CR.
@@ -36,15 +36,6 @@ GcpNfsVolume and AwsNfsVolume are namespace-level CRs. Once you create a GcpNfsV
 
 ## Cloud Providers' Specifics
 
-### Google Cloud Kyma Clusters
-
-Kyma clusters provisioned on Google Cloud use Filestore as the underlying NFS. See the following list of all CRs available in the Cloud Manager module dedicated to Google Cloud Filestore:
-
-* GcpNfsVolume CR
-* GcpNfsVolumeBackup
-* GcpNfsBackupSchedule
-* GcpNfsVolumeRestore
-
 ### Amazon Web Services Kyma Cluster
 
 Kyma clusters provisioned on Amazon Web Services use Amazon Elastic File System. See the following list of CRs available in the Cloud Manager module dedicated to Amazon Elastic File System:
@@ -53,6 +44,15 @@ Kyma clusters provisioned on Amazon Web Services use Amazon Elastic File System.
 * AwsNfsVolumeBackup
 * AwsNfsBackupSchedule
 * AwsNfsVolumeRestore
+
+### Google Cloud Kyma Clusters
+
+Kyma clusters provisioned on Google Cloud use Filestore as the underlying NFS. See the following list of all CRs available in the Cloud Manager module dedicated to Google Cloud Filestore:
+
+* GcpNfsVolume CR
+* GcpNfsVolumeBackup
+* GcpNfsBackupSchedule
+* GcpNfsVolumeRestore
 
 ## Related information
 
