Apply review suggestions

--- a/docs/user/00-20-nfs.md
+++ b/docs/user/00-20-nfs.md
@@ -2,7 +2,7 @@
 
 ## Overview
 
-The Cloud Manager module provides a Network File System (NFS) feature which allows you to create ReadWriteMany (RWX) volumes. RWX volumes can be used by multiple workloads.
+The Cloud Manager module provides a Network File System (NFS) feature which allows you to create ReadWriteMany (RWX) volumes. While regular persistent disk volumes can't be shared and can be used by only a single workload, RWX volumes can be used by multiple workloads.
 
 When you create an NFS instance in Kyma, you depend on the cloud provider of your Kyma cluster. The cloud provider in use determines the exact implementation.
 
@@ -41,21 +41,21 @@ AwsNfsVolume and GcpNfsVolume are namespace-level CRs. Once you create a GcpNfsV
 Kyma clusters provisioned on Amazon Web Services use Amazon Elastic File System. See the following list of CRs available in the Cloud Manager module dedicated to Amazon Elastic File System:
 
 * AwsNfsVolume CR
-* AwsNfsVolumeBackup
-* AwsNfsBackupSchedule
-* AwsNfsVolumeRestore
+* AwsNfsVolumeBackup CR
+* AwsNfsBackupSchedule CR
+* AwsNfsVolumeRestore CR
 
 ### Google Cloud Kyma Clusters
 
 Kyma clusters provisioned on Google Cloud use Filestore as the underlying NFS. See the following list of all CRs available in the Cloud Manager module dedicated to Google Cloud Filestore:
 
 * GcpNfsVolume CR
-* GcpNfsVolumeBackup
-* GcpNfsBackupSchedule
-* GcpNfsVolumeRestore
+* GcpNfsVolumeBackup CR
+* GcpNfsBackupSchedule CR
+* GcpNfsVolumeRestore CR
 
 ## Related information
 
-* [Cloud Manager Resources: NFS](./resources/README.md#nfs).
-* [Tutorials](./tutorials/README.md).
+* [Cloud Manager Resources: NFS](./resources/README.md#nfs)
+* [Tutorials](./tutorials/README.md)
 * Pricing (link TBD)
