Add input for the VPC peering feature

--- a/docs/user/00-20-nfs.md
+++ b/docs/user/00-20-nfs.md
@@ -6,7 +6,7 @@ The Cloud Manager module provides a Network File System (NFS) feature which allo
 
 When you create an NFS instance in Kyma, you depend on the cloud provider of your Kyma cluster. The cloud provider in use determines the exact implementation.
 
-Cloud Manager module supports the NFS feature of two cloud providers:
+The Cloud Manager module supports the NFS feature of two cloud providers:
 
 * Amazon Web Services [Amazon Elastic File System](https://aws.amazon.com/efs/)
 * Google Cloud's [Filestore](https://cloud.google.com/filestore?hl=en)
