Unify the section titles across the topics

--- a/docs/user/00-20-nfs.md
+++ b/docs/user/00-20-nfs.md
@@ -1,8 +1,8 @@
 # NFS
 
-## Overview
-
 The Cloud Manager module provides a Network File System (NFS) feature which allows you to create ReadWriteMany (RWX) volumes. While regular persistent disk volumes can't be shared and can be used by only a single workload, RWX volumes can be used by multiple workloads.
+
+## Cloud Providers
 
 When you create an NFS instance in Kyma, you depend on the cloud provider of your Kyma cluster. The cloud provider in use determines the exact implementation.
 
@@ -11,7 +11,7 @@ The Cloud Manager module supports the NFS feature of two cloud providers:
 * Amazon Web Services [Amazon Elastic File System](https://aws.amazon.com/efs/)
 * Google Cloud's [Filestore](https://cloud.google.com/filestore?hl=en)
 
-You can configure Cloud Manager's NFS instances using a dedicated NFS custom resource corresponding with the cloud provider for your Kyma cluster, namely AwsNfsVolume CR or GcpNfsVolume CR.
+You can creare and configure a Cloud Manager's NFS instance using a dedicated NFS custom resource corresponding with the cloud provider for your Kyma cluster, namely AwsNfsVolume CR or GcpNfsVolume CR.
 
 ## Prerequisites
 
@@ -34,7 +34,7 @@ AwsNfsVolume and GcpNfsVolume are namespace-level CRs. Once you create a GcpNfsV
   * By default, the PVC's name is the same as the name of your NFS instance unless you specify a different name.
   * The PVC references the automatically created PV.
 
-## Cloud Providers' Specifics
+## Cloud Provider-Specific Resources
 
 ### Amazon Web Services Kyma Cluster
 
@@ -54,8 +54,10 @@ Kyma clusters provisioned on Google Cloud use Filestore as the underlying NFS. S
 * GcpNfsBackupSchedule CR
 * GcpNfsVolumeRestore CR
 
+For more information on NFS-related CRs, see [Cloud Manager Resources: NFS](./resources/README.md#nfs).
+
 ## Related information
 
 * [Cloud Manager Resources: NFS](./resources/README.md#nfs)
 * [Tutorials](./tutorials/README.md)
-* Pricing (link TBD)
+* [Calculation with the Cloud Manager Module](https://help.sap.com/docs/btp/sap-business-technology-platform-internal/commercial-information-sap-btp-kyma-runtime?state=DRAFT&version=Internal#calculation-with-the-cloud-manager-module)
