--- a/docs/user/00-20-nfs.md
+++ b/docs/user/00-20-nfs.md
@@ -11,7 +11,7 @@ The Cloud Manager module supports the NFS feature of two cloud providers:
 * Amazon Web Services [Amazon Elastic File System](https://aws.amazon.com/efs/)
 * Google Cloud's [Filestore](https://cloud.google.com/filestore?hl=en)
 
-You can creare and configure a Cloud Manager's NFS instance using a dedicated NFS custom resource corresponding with the cloud provider for your Kyma cluster, namely AwsNfsVolume CR or GcpNfsVolume CR.
+You can create and configure a Cloud Manager's NFS instance using a dedicated NFS custom resource corresponding with the cloud provider for your Kyma cluster, namely AwsNfsVolume CR or GcpNfsVolume CR.
 
 ## Prerequisites
 
@@ -34,7 +34,7 @@ AwsNfsVolume and GcpNfsVolume are namespace-level CRs. Once you create a GcpNfsV
   * By default, the PVC's name is the same as the name of your NFS instance unless you specify a different name.
   * The PVC references the automatically created PV.
 
-## Cloud Provider-Specific Resources
+## NFS Resources
 
 ### Amazon Web Services Kyma Cluster
 
@@ -54,7 +54,11 @@ Kyma clusters provisioned on Google Cloud use Filestore as the underlying NFS. S
 * GcpNfsBackupSchedule CR
 * GcpNfsVolumeRestore CR
 
-For more information on NFS-related CRs, see [Cloud Manager Resources: NFS](./resources/README.md#nfs).
+For more information on the NFS-related CRs, see [Cloud Manager Resources: NFS](./resources/README.md#nfs).
+
+## Pricing
+
+Using the Cloud Manager module and enabling NFS storage, introduces additional costs. For more information, see [Calculation with the Cloud Manager Module](https://help.sap.com/docs/btp/sap-business-technology-platform-internal/commercial-information-sap-btp-kyma-runtime?state=DRAFT&version=Internal#calculation-with-the-cloud-manager-module).
 
 ## Related information
 
