--- a/docs/user/00-20-nfs.md
+++ b/docs/user/00-20-nfs.md
@@ -8,7 +8,7 @@ When you create an NFS instance in Kyma, you depend on the cloud provider of you
 
 The Cloud Manager module supports the NFS feature of two cloud providers:
 
-* Amazon Web Services [Amazon Elastic File System](https://aws.amazon.com/efs/)
+* Amazon Web Services` [Amazon Elastic File System](https://aws.amazon.com/efs/)
 * Google Cloud's [Filestore](https://cloud.google.com/filestore?hl=en)
 
 You can create and configure a Cloud Manager's NFS instance using a dedicated NFS custom resource corresponding with the cloud provider for your Kyma cluster, namely AwsNfsVolume CR or GcpNfsVolume CR.
