Apply review suggestions

--- a/docs/user/00-20-nfs.md
+++ b/docs/user/00-20-nfs.md
@@ -6,12 +6,12 @@ The Cloud Manager module provides a Network File System (NFS) feature which allo
 
 When you create an NFS instance in Kyma, you depend on the cloud provider of your Kyma cluster. The cloud provider in use determines the exact implementation.
 
-The Cloud Manager module supports the NFS feature of two cloud providers:
+The Cloud Manager module supports the NFS feature of the following cloud providers:
 
-* Amazon Web Services` [Amazon Elastic File System](https://aws.amazon.com/efs)
-* Google Cloud's [Filestore](https://cloud.google.com/filestore?hl=en)
+* Amazon Web Services [Amazon Elastic File System](https://aws.amazon.com/efs)
+* Google Cloud [Filestore](https://cloud.google.com/filestore?hl=en)
 
-You can create and configure a Cloud Manager's NFS instance using a dedicated NFS custom resource corresponding with the cloud provider for your Kyma cluster, namely AwsNfsVolume CR or GcpNfsVolume CR.
+To create and configure a Cloud Manager's NFS instance, use a dedicated NFS custom resource (CR) corresponding with the cloud provider for your Kyma cluster, namely AwsNfsVolume CR or GcpNfsVolume CR.
 
 ## Prerequisites
 
@@ -60,7 +60,7 @@ For more information on the NFS-related CRs, see [Cloud Manager Resources: NFS](
 
 Using the Cloud Manager module and enabling NFS storage, introduces additional costs. For more information, see [Calculation with the Cloud Manager Module](https://help.sap.com/docs/btp/sap-business-technology-platform-internal/commercial-information-sap-btp-kyma-runtime?state=DRAFT&version=Internal#calculation-with-the-cloud-manager-module).
 
-## Related information
+## Related Information
 
 * [Cloud Manager Resources: NFS](./resources/README.md#nfs)
 * [Tutorials](./tutorials/README.md)
