--- a/docs/user/00-20-nfs.md
+++ b/docs/user/00-20-nfs.md
@@ -1,2 +1,67 @@
 # NFS
 
+The Cloud Manager module provides a Network File System (NFS) feature which allows you to create ReadWriteMany (RWX) volumes. While regular persistent disk volumes can't be shared and can be used by only a single workload, RWX volumes can be used by multiple workloads.
+
+## Cloud Providers
+
+When you create an NFS instance in Kyma, you depend on the cloud provider of your Kyma cluster. The cloud provider in use determines the exact implementation.
+
+The Cloud Manager module supports the NFS feature of the following cloud providers:
+
+* Amazon Web Services [Amazon Elastic File System](https://aws.amazon.com/efs)
+* Google Cloud [Filestore](https://cloud.google.com/filestore?hl=en)
+
+To create and configure a Cloud Manager's NFS instance, use a dedicated NFS custom resource (CR) corresponding with the cloud provider for your Kyma cluster, namely AwsNfsVolume CR or GcpNfsVolume CR.
+
+## Prerequisites
+
+To instantiate NFS, an IpRange CR must exist in the Kyma cluster. IpRange defines network address space reserved for your cloud provider's NFS resources. If you don't create the IpRange CR manually, Cloud Manager creates a default IpRange CR with the default address space and Classless Inter-Domain Routing (CIDR) selected. For more information, see [IpRange Custom Resoucre](./resources/04-10-iprange.md).
+
+## Lifecycle
+
+AwsNfsVolume and GcpNfsVolume are namespace-level CRs. Once you create a GcpNfsVolume or AwsNfsVolume resource, the following are also created automatically:
+
+* IpRange CR
+  * IpRange is a cluster-level CR.
+  * Only one IpRange CR can exist per cluster.
+  * If you don't want the default IpRange to be used, create one manually.
+* Persistent Volume (PV)
+  * PV is a cluster-level piece of storage.
+  * The PV uses a unique name based on the NFS instance status ID.
+  * The PV references the instantiated NFS in the respective cloud provider.
+* Persistent Volume Claim (PVC)
+  * PVC is a namespace-level resource created in the same namespace as the IpRange CR.
+  * By default, the PVC's name is the same as the name of your NFS instance unless you specify a different name.
+  * The PVC references the automatically created PV.
+
+## NFS Resources
+
+### Amazon Web Services Kyma Cluster
+
+Kyma clusters provisioned on Amazon Web Services use Amazon Elastic File System. See the following list of CRs available in the Cloud Manager module dedicated to Amazon Elastic File System:
+
+* AwsNfsVolume CR
+* AwsNfsVolumeBackup CR
+* AwsNfsBackupSchedule CR
+* AwsNfsVolumeRestore CR
+
+### Google Cloud Kyma Clusters
+
+Kyma clusters provisioned on Google Cloud use Filestore as the underlying NFS. See the following list of all CRs available in the Cloud Manager module dedicated to Google Cloud Filestore:
+
+* GcpNfsVolume CR
+* GcpNfsVolumeBackup CR
+* GcpNfsBackupSchedule CR
+* GcpNfsVolumeRestore CR
+
+For more information on the NFS-related CRs, see [Cloud Manager Resources: NFS](./resources/README.md#nfs).
+
+## Pricing
+
+Using the Cloud Manager module and enabling NFS storage, introduces additional costs. For more information, see [Calculation with the Cloud Manager Module](https://help.sap.com/docs/btp/sap-business-technology-platform-internal/commercial-information-sap-btp-kyma-runtime?state=DRAFT&version=Internal#calculation-with-the-cloud-manager-module).
+
+## Related Information
+
+* [Cloud Manager Resources: NFS](./resources/README.md#nfs)
+* [Tutorials](./tutorials/README.md)
+* [Calculation with the Cloud Manager Module](https://help.sap.com/docs/btp/sap-business-technology-platform-internal/commercial-information-sap-btp-kyma-runtime?state=DRAFT&version=Internal#calculation-with-the-cloud-manager-module)
