--- a/docs/user/00-20-nfs.md
+++ b/docs/user/00-20-nfs.md
@@ -1,17 +1,20 @@
 # NFS
 
-The Cloud Manager module provides a Network File System (NFS) feature which allows you to create ReadWriteMany (RWX) volumes. While regular persistent disk volumes can't be shared and can be used by only a single workload, RWX volumes can be used by multiple workloads.
+The Cloud Manager module enables a Network File System (NFS) feature which allows you to create ReadWriteMany (RWX) volumes. While regular persistent disk volumes can't be shared and can be used by only a single workload, RWX volumes can be used by multiple workloads.
+
+> [!NOTE]
+> Using the Cloud Manager module and enabling NFS storage, introduces additional costs. For more information, see [Calculation with the Cloud Manager Module](https://help.sap.com/docs/btp/sap-business-technology-platform-internal/commercial-information-sap-btp-kyma-runtime?state=DRAFT&version=Internal#loioc33bb114a86e474a95db29cfd53f15e6__section_cloud_manager).
 
 ## Cloud Providers
 
-When you create an NFS instance in Kyma, you depend on the cloud provider of your Kyma cluster. The cloud provider in use determines the exact implementation.
+When you create an NFS instance in SAP BTP, Kyma runtime, you depend on the cloud provider of your Kyma cluster. The cloud provider in use determines the exact implementation.
 
 The Cloud Manager module supports the NFS feature of the following cloud providers:
 
 * Amazon Web Services [Amazon Elastic File System](https://aws.amazon.com/efs)
 * Google Cloud [Filestore](https://cloud.google.com/filestore?hl=en)
 
-To create and configure a Cloud Manager's NFS instance, use a dedicated NFS custom resource (CR) corresponding with the cloud provider for your Kyma cluster, namely AwsNfsVolume CR or GcpNfsVolume CR.
+To create and configure a Cloud Manager's NFS instance, use a dedicated NFS custom resource (CR) corresponding with the cloud provider for your Kyma cluster, namely AwsNfsVolume CR or GcpNfsVolume CR. For more information, see [NFS Resources](./resources/README.md#nfs-resources).
 
 ## Prerequisites
 
@@ -19,7 +22,7 @@ To instantiate NFS, an IpRange CR must exist in the Kyma cluster. IpRange define
 
 ## Lifecycle
 
-AwsNfsVolume and GcpNfsVolume are namespace-level CRs. Once you create a GcpNfsVolume or AwsNfsVolume resource, the following are also created automatically:
+AwsNfsVolume and GcpNfsVolume are namespace-level CRs. Once you create a GcpNfsVolume or AwsNfsVolume resource, the following resources are also created automatically:
 
 * IpRange CR
   * IpRange is a cluster-level CR.
@@ -34,34 +37,9 @@ AwsNfsVolume and GcpNfsVolume are namespace-level CRs. Once you create a GcpNfsV
   * By default, the PVC's name is the same as the name of your NFS instance unless you specify a different name.
   * The PVC references the automatically created PV.
 
-## NFS Resources
-
-### Amazon Web Services Kyma Cluster
-
-Kyma clusters provisioned on Amazon Web Services use Amazon Elastic File System. See the following list of CRs available in the Cloud Manager module dedicated to Amazon Elastic File System:
-
-* AwsNfsVolume CR
-* AwsNfsVolumeBackup CR
-* AwsNfsBackupSchedule CR
-* AwsNfsVolumeRestore CR
-
-### Google Cloud Kyma Clusters
-
-Kyma clusters provisioned on Google Cloud use Filestore as the underlying NFS. See the following list of all CRs available in the Cloud Manager module dedicated to Google Cloud Filestore:
-
-* GcpNfsVolume CR
-* GcpNfsVolumeBackup CR
-* GcpNfsBackupSchedule CR
-* GcpNfsVolumeRestore CR
-
-For more information on the NFS-related CRs, see [Cloud Manager Resources: NFS](./resources/README.md#nfs).
-
-## Pricing
-
-Using the Cloud Manager module and enabling NFS storage, introduces additional costs. For more information, see [Calculation with the Cloud Manager Module](https://help.sap.com/docs/btp/sap-business-technology-platform-internal/commercial-information-sap-btp-kyma-runtime?state=DRAFT&version=Internal#calculation-with-the-cloud-manager-module).
-
 ## Related Information
 
-* [Cloud Manager Resources: NFS](./resources/README.md#nfs)
-* [Tutorials](./tutorials/README.md)
+* [Using NFS in Amazon Web Services](./tutorials/01-20-10-aws-nfs-volume.md)
+* [Using NFS in Google Cloud](./tutorials/01-20-20-gcp-nfs-volume.md)
+* [NFS Resources](./resources/README.md#nfs-resources)
 * [Calculation with the Cloud Manager Module](https://help.sap.com/docs/btp/sap-business-technology-platform-internal/commercial-information-sap-btp-kyma-runtime?state=DRAFT&version=Internal#calculation-with-the-cloud-manager-module)
