Add short descriptions

--- a/docs/user/00-20-nfs.md
+++ b/docs/user/00-20-nfs.md
@@ -1,5 +1,7 @@
 # NFS
 
+Cloud Manager NFS feature enables creation of RWX volumes, allowing multiple workloads to use the same storage.
+
 The Cloud Manager module enables a Network File System (NFS) feature which allows you to create ReadWriteMany (RWX) volumes. While regular persistent disk volumes can't be shared and can be used by only a single workload, RWX volumes can be used by multiple workloads.
 
 > [!NOTE]
